--- a/.env
+++ b/.env
@@ -9,3 +9,7 @@ VITE_FIREBASE_APP_ID=1:303895469250:web:fa7f3a6e79f3ffd0912f5b
 # MUHIM: Firebase Console da qilish kerak:
 # 1. Authentication > Sign-in method > Email/Password ni yoqing
 # 2. Firestore Database > Create database > Start in test mode
+
+# Google Gemini AI API Key
+# https://aistudio.google.com/app/apikey dan oling
+VITE_GEMINI_API_KEY=AIzaSyCR3zVWl3WoggqZM7mOkr12BA-mEMiPB6A
