--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,7 @@ VITE_FIREBASE_PROJECT_ID=your_project_id
 VITE_FIREBASE_STORAGE_BUCKET=your_project.appspot.com
 VITE_FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id
 VITE_FIREBASE_APP_ID=your_app_id
+
+# Google Gemini AI API Key
+# https://aistudio.google.com/app/apikey dan oling
+VITE_GEMINI_API_KEY=your_gemini_api_key_here
