--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "dompurify": "^3.3.1",
     "firebase": "^12.9.0",
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
